--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -11,6 +11,7 @@ nav {
     padding: var(--spacing-xxs) var(--spacing-m);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.08);
     background-color: var(--white);
+    z-index: 2;
 }
 
 .logo {
@@ -174,7 +175,6 @@ footer .disclaimer {
         overflow: hidden;
         transition: all 0.5s ease-in-out;
         box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.08);
-        z-index: 1;
     }
 
     .mobile-menu a {
@@ -183,7 +183,6 @@ footer .disclaimer {
 
     footer {
         padding: var(--spacing-xs);
-        z-index: -1;
     }
 
     .footer-flex p {
